--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 
 main {
     width: 28vw;
-    height: 78vh;
+    height: 90vh;
 
     padding: 20px;
 
@@ -56,6 +56,8 @@ main {
 	outline: inherit;
 
     border-radius: 10px;
+
+    transition: all 0.3s ease-in-out;
 }
 
 .brown {
@@ -75,4 +77,19 @@ main {
 .orange {
     background-color: #FF7D29;
     color: #ffffff;
+    grid-column: 3 / 5;
+}
+
+.red {
+    background-color: #EE4E4E; 
+    color: #ffffff;
+    font-size: 48px;
+    grid-column: 1 / 3;
+}
+
+.active {
+    background-color: #373A40;
+    color: #D9D9D9;
+
+    transition: all 0.3s ease-in-out;
 }
